--- a/client/src/components/pages/todo/todoArea/cart/cart.module.scss
+++ b/client/src/components/pages/todo/todoArea/cart/cart.module.scss
@@ -8,12 +8,12 @@
     background: #49c6fb78;
     border: 1px solid rgba(0, 0, 0, .15);
     border-radius: 4px;
-    margin-bottom: 10px;
+    margin: 0 4px 10px 4px;
     padding: 10px 8px;
 
     p {
         font-size: 14px;
-        color: white;
+        color: $white;
     }
 
     button {
