Add create task and styles
Add create task reqest. Add CreateArea. Fix animation bugs. Add new styles.

--- a/client/src/components/pages/todo/todoArea/container/container.module.scss
+++ b/client/src/components/pages/todo/todoArea/container/container.module.scss
@@ -28,4 +28,22 @@
     margin-top: 20px;
     height: 360px;
     overflow-y: auto;
+
+    &::-webkit-scrollbar {
+        background-color: inherit;
+        width: 8px;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+        background-color: #2e718f;
+        border-radius: 6px;
+    }
+    
+    &::-webkit-scrollbar-button:vertical:start:decrement {
+        display: none;
+    }
+    
+    &::-webkit-scrollbar-button:vertical:end:increment {
+        display: none;
+    }
 }
