--- a/client/src/components/pages/todo/todoArea/cart/cart.module.scss
+++ b/client/src/components/pages/todo/todoArea/cart/cart.module.scss
@@ -1,11 +1,12 @@
 @import '@/assets/styles/constants';
 
+
 .cart {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
-    // background: #49c6fb78;
+    min-height: 50px;
     background-color: rgba(0, 0, 0, 0.092);
     border: 1px solid rgba(0, 0, 0, 0.047);
     border-radius: 4px;
@@ -15,22 +16,24 @@
     transition: all .2s;
 
     p {
+        margin-top: 10px;
+        width: 90%;
+        height: 100%;
         font-size: 14px;
-        color: $white;
-    }
+        color: white;
+        text-align: justify;
+        z-index: -1000;
 
-    button {
-        background: none;
-        color: $gray;
-        font-size: 18px;
-        cursor: pointer;
-        transition: all .2s;
-
-        &:hover {
-            color: $yellow;
+        span {
+            top: 0;
+            left: 2px;
+            position: absolute;
+            font-size: 12px;
+            color: rgba(0, 0, 0, 0.482);
         }
     }
 }
+
 
 
 .activeDrag {
