--- a/client/src/components/pages/todo/todoArea/container/container.module.scss
+++ b/client/src/components/pages/todo/todoArea/container/container.module.scss
@@ -35,7 +35,7 @@
     }
     
     &::-webkit-scrollbar-thumb {
-        background-color: #2e718f;
+        background-color: rgba(0, 0, 0, 0.252);
         border-radius: 6px;
     }
     
