--- a/client/src/components/pages/todo/todoArea/container/container.module.scss
+++ b/client/src/components/pages/todo/todoArea/container/container.module.scss
@@ -8,6 +8,8 @@
     background-color: rgba(0, 0, 0, .15);
     box-shadow: 0px 3px 4px rgba(92, 92, 92, 0.25);
     padding: 10px 5px;
+    margin: 0 10px;
+    z-index: 1;
 
     h3 {
         width: 70%;
