--- a/client/src/assets/styles/reseter.scss
+++ b/client/src/assets/styles/reseter.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 @import './constants.scss';
 
 html,
@@ -96,6 +97,7 @@ html {
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Lato', 'OpenSans';
+    font-family: 'Quicksand', sans-serif;
     letter-spacing: 1.2px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -124,6 +126,7 @@ textarea,
 textarea::placeholder {
     border: none;
     font-family: -apple-system, BlinkMacSystemFont, 'Lato', 'OpenSans';
+    font-family: 'Quicksand', sans-serif;
     letter-spacing: 1.2px;
 }
 
@@ -134,4 +137,5 @@ button:focus {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
+    font-family: 'Quicksand', sans-serif;
 }
