--- a/client/src/components/common/Header/header.module.scss
+++ b/client/src/components/common/Header/header.module.scss
@@ -5,11 +5,17 @@
     justify-content: center;
     margin-bottom: 40px;
     padding: 10px 0;
-    box-shadow: 0px 3px 4px rgba(92, 92, 92, 0.25);
+    box-shadow: 0px 3px 5px rgba(92, 92, 92, 0.3);
 
     h1 {
         font-size: 36px;
         font-weight: 700;
         color: $yellow;
+
+        span {
+            color: white;
+            font-size: 18px;
+            font-style: italic;
+        }
     }
 }
