--- a/client/src/components/pages/todo/createArea/createArea.module.scss
+++ b/client/src/components/pages/todo/createArea/createArea.module.scss
@@ -2,8 +2,10 @@
 
 .wrapper {
     width: 50%;
+    min-width: 300px;
     height: 100px;
     margin: 80px auto 40px;
+    padding: 10px;
     border-radius: 8px;
     background-color: rgba(0, 0, 0, 0.092);
     display: flex;
@@ -13,6 +15,7 @@
     input {
         flex-basis: 80%;
         padding: 10px 5px;
+        margin-right: 5px;
         outline: none;
         border-radius: 4px;
         background-color: $white;
@@ -32,6 +35,12 @@
 
         &:hover {
             opacity: .7;
+        }
+    }
+
+    @media (max-width: 991px) {
+        input, button {
+            font-size: 12px;
         }
     }
 }
