--- a/client/src/assets/styles/main.scss
+++ b/client/src/assets/styles/main.scss
@@ -1,3 +1,12 @@
+@import './constants.scss';
+
+
+body {
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(90deg, $blue 0%, $pink 100%);
+}
+
 .container {
     max-width: 1600px;
     margin: 0 auto;
