--- a/client/src/components/pages/todo/createArea/createArea.module.scss
+++ b/client/src/components/pages/todo/createArea/createArea.module.scss
@@ -20,9 +20,15 @@
         border-radius: 4px;
         background-color: $white;
         font-size: 18px;
+
+        &:focus {
+            outline: 1px solid $yellow;
+        }
     }
 
     button {
+        position: relative;
+        overflow: hidden;
         flex-basis: 10%;
         padding: 10px 5px;
         border-radius: 4px;
@@ -33,8 +39,33 @@
         box-shadow: 0px 3px 4px rgba(92, 92, 92, 0.25);
         cursor: pointer;
 
+        &:after {
+            content: "";
+            display: block;
+            width: 20px;
+            height: 200px;
+            margin-left: 50px;
+            background: #fff;
+            background: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.5) 0%,
+                rgba(255, 255, 255, 1) 50%,
+                rgba(255, 255, 255, 0.5) 100%
+            );
+            left: -40px;
+            top: -100px;
+            z-index: 1;
+            transform: rotate(45deg);
+            position: absolute;
+            animation: movingFlare 3s ease-in-out 0.05s infinite;
+        }
+
         &:hover {
             opacity: .7;
+        }
+
+        &:active {
+            transform: translateY(4px);
         }
     }
 
@@ -44,3 +75,18 @@
         }
     }
 }
+
+@keyframes movingFlare {
+    0% {
+      left: -30px;
+      margin-left: 0px;
+    }
+    30% {
+      left: 110%;
+      margin-left: 80px;
+    }
+    100% {
+      left: 110%;
+      margin-left: 80px;
+    }
+  }
