Add scroll animation

--- a/client/src/components/pages/todo/createArea/createArea.module.scss
+++ b/client/src/components/pages/todo/createArea/createArea.module.scss
@@ -65,6 +65,8 @@
         }
 
         &:active {
+            border: none;
+            outline: none;
             transform: translateY(4px);
         }
     }
