Refactor file names

--- a/client/src/components/pages/todo/todoArea/card/card.module.scss
+++ b/client/src/components/pages/todo/todoArea/card/card.module.scss
@@ -1,7 +1,7 @@
 @import '@/assets/styles/constants';
 
 
-.cart {
+.card {
     position: relative;
     display: flex;
     justify-content: space-between;
